This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 1.06

- Make sure to sync and not just flush queue files to protect against
  crashes during sensitive operations.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.05

- Fixed compilation of src/selfpipe.cc on Solaris and other OSes.

- Fixed handling of TM_HAS_ISDST on Solaris.

- Fixed a few address parsing glitches.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.04

- Fixed rewriting mail to @localhost if defaultdomain is set by not
  appending .defaultdomain to *@localhost.

- Added support for reporting the sender and recipients in mailq.

- Added a send timeout in nullmailer-send, to kill sending messages that
  stall.

- Added support in nullmailer-inject for $NULLMAILER_QUEUE to name the
  program which is used to queue messages.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.03

- Fixed the SMTP protocol module to send QUIT on protocol failures.

- Added support for the SMTP AUTH LOGIN method.  Thanks to Sean
  MacLennan for the suggestion.

- Fixed the SMTP protocol module to send EHLO instead of HELO when doing
  authentication.  Thanks to Norbert Tretkowski for pointing this out.

- Fixed compile breakage on Solaris due to use of setenv.

- Fixed netstring length bug in QMQP sending module.

- If the sender name cannot be determined from the environment